fix: fix ay11 buttons contrast

--- a/theme/ItaliaTheme/_common.scss
+++ b/theme/ItaliaTheme/_common.scss
@@ -27,4 +27,15 @@
       outline: none;
     }
   }
+
+  .btn-primary {
+    &,
+    &:hover,
+    &:active {
+      svg.icon {
+        color: $primary-text;
+        fill: $primary-text;
+      }
+    }
+  }
 }
